apps/istio-gateway/gateway-config/demo-httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: demo-app
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: demo-app
spec:
  hosts:
  - "httpbin.intra.technovise.com"
  gateways:
  - istio-ingress/intra-technovise-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: httpbin.demo-app.svc.cluster.local
        port:
          number: 8000
